--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -58,7 +58,7 @@
                         });
                     </script>
                     <span class="input-group-btn">
-                        <a id="btnCity" href="">
+                        <a id="btnCity" href="#">
                             <button class="btn-default btn btn-edu btn-block" type="button">Partir</button>
                         </a>
                     </span>
