--- a/web/front/less/eduspeak/friends.less
+++ b/web/front/less/eduspeak/friends.less
@@ -81,4 +81,12 @@
             }
         }
     }
+    .friends-information{
+        img{
+            width: 1em;
+        }
+        i{
+            font-size: 1em;
+        }
+    }
 }
