--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -11,7 +11,7 @@
         <div class="col-md-3 col-xs-3">
             <div class="profil-contact container">
                 <div class="row">
-                    <img src="{{ image }}" alt="Photo" class="img-profil" />
+                    <img src="{{ user.getWebPath }}" alt="Photo" class="img-profil" />
                 </div>
                 <div class="row">
                     <h3 class="profil-name">{{ user.username }}</h3>
