--- a/web/front/less/eduspeak/discussion.less
+++ b/web/front/less/eduspeak/discussion.less
@@ -109,4 +109,18 @@
             }
         }
     }
+    .discussion-news{
+        margin-top: 2em;
+        a{
+            color: black;
+            text-decoration: none;
+        }
+        a:hover{
+            color: black;
+            text-decoration: none;
+        }
+    }
+    .discussion-stream{
+        background-color: #EEEEEE;
+    }
 }
