--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -8,9 +8,10 @@ img {
 // NAVBAR ---------------------------------------------------------------------------
 
 .profile-picture {
-    border-radius: @size-px-30;
-    margin-right: @size-px-10;
-    width: 4em;
+    border-radius: 50%;
+    padding: 0.3em;
+    width: 3em;
+    height: 3em;
 }
 
 // SCREEN ---------------------------------------------------------------------------
