Remplissage des fonctionnalités

--- a/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
@@ -30,22 +30,32 @@
     </thead>
     <tbody>
       <tr class="fonctionnalités">
-        <td class="description">Description des fonctionnalités 1</td>
+        <td class="description">5 amis maximum</td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></i></div></td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></i></div></td>
       </tr>
       <tr class="fonctionnalités">
-        <td class="description">Description des fonctionnalités 2</td>
+        <td class="description">Discussion illimités avec les amis</td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
       </tr>
       <tr class="fonctionnalités">
-        <td class="description">Description des fonctionnalités 3</td>
+        <td class="description">15 discussions par mois</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+      </tr>
+      <tr class="fonctionnalités">
+        <td class="description">Amis illimité</td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
         <td class="cell"><div><i class="fa fa-times fa-3x"></div></td>
       </tr>
       <tr class="fonctionnalités">
-        <td class="description">Description des fonctionnalités</td>
+        <td class="description">Enregistrement des discussions non amis</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+        <td class="cell"><div><i class="fa fa-times fa-3x"></div></td>
+      </tr>
+      <tr class="fonctionnalités">
+        <td class="description">Discussions illimités</td>
         <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
         <td class="cell"><div><i class="fa fa-times fa-3x"></div></td>
       </tr>
