--- a/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
@@ -3,18 +3,18 @@
 {% block body %}
 <div id="premium">
     <div class="row row-description ">
-      <h1>Passez au premium</h1>
+      <h1>Passez au premium!</h1>
     <div class="col-md-4">
       <i class="fa fa-commenting fa-5x"></i>
-      <h3>Parler dans le monde entier</h3>
+      <h3>Parlez dans le monde entier</h3>
     </div>
     <div class="col-md-4">
       <i class="fa fa-globe fa-5x"></i>
-      <h3>Découvrer de nouvelle culture</h3>
+      <h3>Découvrez de nouvelles cultures</h3>
     </div>
     <div class="col-md-4">
       <i class="fa fa-line-chart fa-5x"></i>
-      <h3>Améliorer vous!</h3>
+      <h3>Améliorez-vous!</h3>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
     <table class="table table-borderless">
     <thead>
       <tr class="title">
-        <th><h2>Description des fonctionnalités</h2></th>
+        <th><h2></h2></th>
         <th><h2>Premium</i></h2></th>
         <th><h2>Free</i></h2></th>
       </tr>
