--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -115,3 +115,12 @@ img {
         }
     }
 }
+
+.notification{
+    position: absolute;
+    top: 1.5rem;
+    right: 0;
+    color: red;
+    border-radius: 100%;
+    width: 1rem;
+}
