--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -101,7 +101,7 @@
                 <div class="col-md-12">
                     <div class="row">
                         <div class="col-md-4 col-md-offset-4">
-                            <a class="btn btn-default btn-block btn-lg btn-edu btn-facebook" href="/app_dev.php/login/facebook">
+                            <a class="btn btn-default btn-block btn-lg btn-edu btn-facebook" href="/app.php/login/facebook">
                                 <i class="fa fa-facebook-official"></i> Login with facebook
                             </a>
                         </div>
