--- a/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
+++ b/src/ChatBundle/Resources/views/Discussion/discussion.html.twig
@@ -100,8 +100,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.pubnub.com/pubnub.min.js"></script>
-    <script src="https://stephenlb.github.io/webrtc-sdk/js/webrtc.js"></script>
     <!-- <script src="{{asset('front/js/eduspeak/chat.js')}}"></script> -->
     <script>
     (function(){
@@ -164,7 +162,7 @@
                 if(m.text){
                     display_message(m);
                 }
-                // notify_connection();
+                notify_connection();
             }
         });
 
