New template edit

--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -3,14 +3,14 @@
 <div id="edu-profile" class="fos_user_user_show full-height">
     <div class="row profil-banner">
         <div class="col-md-12">
-            <img src="http://1010uk.a.cdnify.io/cdn/farfuture/b4EDw936Zxf-JgbAyWkDWT052-ildkqGN03gc7CD4fQ/mtime:1433946444/sites/default/files/eiffel-tower-cameron-wears-BY-NC-banner.jpg"/>
+
         </div>
     </div>
-    <div id="edu-profile-top" class="row">
-        <div class="col-md-3 col-xs-3">
+    <div class="row">
+        <div class="col-md-3">
             <div class="profil-contact container">
                 <div class="row">
-                    <img src="{{ image }}" alt="Photo">
+                    <img class="edit-profile-picture" src="{{ image }}" alt="Photo">
                 </div>
                 <div class="row">
                     {{ form_widget(form.file) }}
@@ -18,15 +18,15 @@
                 <div class="row">
                     <h3 class="profil-name" style="margin: 0">{{ form_widget(form.username) }}</h3>
                 </div>
-                <div class="row">
-                    {{ form_widget(form.save) }}
-                </div>
             </div>
         </div>
-        <div class="col-md-8 col-md-offset-1 col-xs-6 col-xs-offset-3 profil-listing">
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-3 profil-listing">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-xs-12 profil-language">
+                    <div class="col-md-12 col-xs-12 profil-details">
                         <h4>I can speak</h4>
                         <ul>
                             <li>
@@ -36,17 +36,13 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-12 col-xs-12 profil-language">
+                    <div class="col-md-12 col-xs-12 profil-details">
                         <h4>I wish to speak</h4>
                         {{ form_widget(form.learnLanguage) }}
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<div id="edu-profile-row" class="container">
-    <div class="row">
         <div class="col-md-3 col-xs-3">
             <div class="profil-details">
                 <ul>
@@ -78,6 +74,11 @@
                     </li>
                 </ul>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-5">
+            {{ form_widget(form.save) }}
         </div>
     </div>
 </div>
