Remove unused stuff

--- a/src/EduSpeakBundle/Resources/views/Match/match.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Match/match.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div id="edu-match" class="content">
     {% if matchedUsers is defined %}
-    <div class="row filter">
+    {# <div class="row filter">
         <form>
             <div class="col-md-4 filter-label">
                 <label>Langues parlées</label>
@@ -36,7 +36,7 @@
                 </select>
             </div>
         </form>
-    </div>
+    </div>#}
 
     <div class="row content">
         <div class="col-md-12" id="match-background">
